--- a/config/database.yml
+++ b/config/database.yml
@@ -2,7 +2,7 @@
 #   gem install sqlite3
 development:
   adapter: mysql2
-  database: kunz
+  database: stash_dev
   username: root
   password:
   host: localhost
@@ -13,7 +13,7 @@ development:
 # Do not set this db to the same as development or production.
 test: &test
   adapter: mysql2
-  database: kunz_test
+  database: stash_test
   username: root
   password:
   host: localhost
@@ -21,7 +21,7 @@ test: &test
 production:
   adapter: mysql2
   encoding: utf8
-  database: kunz_prod
+  database: stash_prod
   username: root
   password:
   host: localhost
